--- a/index.html
+++ b/index.html
@@ -959,13 +959,13 @@
                     <pre><code data-sample='files/macros.clj#list-add-splice'></code></pre>
                 </section>
 
-                <section>
+                <!-- section>
                     <pre><code data-sample='files/macros.clj#quoting-101-1'></code></pre>
-                </section>
+                </section-->
 
-                <section>
+                <!-- section>
                     <pre><code data-sample='files/macros.clj#quoting-101-2'></code></pre>
-                </section>
+                </section -->
 
                 <!-- section>
                 <pre><code data-sample='files/macros.clj#quoting-101-3'></code></pre>
@@ -1048,7 +1048,39 @@
                 </section>
 
                 <section>
+                    <pre><code data-sample='files/macros.clj#println-dbg'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#dbg-dbg'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#dbg-macro'></code></pre>
+                </section>
+
+                <section>
                     <pre><code data-sample='files/macros.clj#lsl'></code></pre>
+                </section>
+
+                <section>
+                    <h2>Macros</h2>
+                    <h3>It's not all roses and sunshine</h3>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macros-difficult'></code></pre>
+                </section>
+                <section>
+                    <pre><code data-sample='files/macros.clj#macro-returning-fn-gensym'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macros-are-not-values'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#but-i-never-wrote-a-macro'></code></pre>
                 </section>
 
                 <section>
